--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     color: white;
 }
 
+#controls {
+    display: none;
+}
+
 #message {
     font-family: 'Courier New', Courier, monospace;
 }
@@ -12,7 +16,7 @@ body {
     top: 0;
     right: 0;
     bottom: 0;
-    width: 70%;
+    width: 75%;
     object-fit: cover;
 }
 #console {
@@ -20,7 +24,7 @@ body {
     top: 1%;
     left: 1%;
     bottom: 1%;
-    width: 28%;
+    width: 23%;
     overflow: hidden;   
 }
 
